[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "uv-lock-greenlet-repro"
version = "0.1.0"
description = "Singer tap for GooglePlay, built with the Meltano SDK for Singer Taps."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
  "SQLAlchemy~=2.0.32",
]

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.uv]
dev-dependencies = [
  "pytest>=7",
]
